# RDcode_API_server/swagger_server/swagger/swagger.yaml
@@ -480,7 +480,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorModel'
       x-openapi-router-controller: swagger_server.controllers.synonym_s_controller
-  /{lang}/ClinicalEntity/orphacode/{orphacode}/GroupType:
+  /{lang}/ClinicalEntity/orphacode/{orphacode}/ClassificationLevel:
     get:
       tags:
       - Classification level
@@ -526,10 +526,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GroupType'
+                $ref: '#/components/schemas/ClassificationLevel'
             application/yaml:
               schema:
-                $ref: '#/components/schemas/GroupType'
+                $ref: '#/components/schemas/ClassificationLevel'
         "400":
           description: Bad request
         "401":
@@ -555,13 +555,13 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorModel'
       x-openapi-router-controller: swagger_server.controllers.classification_level_controller
-  /{lang}/ClinicalEntity/orphacode/{orphacode}/Type:
+  /{lang}/ClinicalEntity/orphacode/{orphacode}/Typology:
     get:
       tags:
       - Typology
       summary: Search for a clinical entity's typology by ORPHAcode.
       description: The result retrieves the clinical entity's ORPHAcode and its typology
-      operationId: list_type
+      operationId: list_typology
       parameters:
       - name: lang
         in: path
@@ -600,10 +600,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Type'
+                $ref: '#/components/schemas/Typology'
             application/yaml:
               schema:
-                $ref: '#/components/schemas/Type'
+                $ref: '#/components/schemas/Typology'
         "400":
           description: Bad request
         "401":
@@ -1637,7 +1637,7 @@ components:
         - Progressive massive osteolysis
         - Vanishing bone disease
         Date: 2000-01-23T04:56:07.000+00:00
-    GroupType:
+    ClassificationLevel:
       type: object
       properties:
         Date:
@@ -1647,7 +1647,7 @@ components:
           type: integer
           format: int32
           example: 10
-        GroupType:
+        ClassificationLevel:
           type: string
           example: Group
           enum:
@@ -1656,9 +1656,9 @@ components:
           - SubType
       example:
         ORPHAcode: 10
-        GroupType: Group
+        ClassificationLevel: Group
         Date: 2000-01-23T04:56:07.000+00:00
-    Type:
+    Typology:
       type: object
       properties:
         Date:
@@ -1668,7 +1668,7 @@ components:
           type: integer
           format: int32
           example: 10
-        Type:
+        Typology:
           type: string
           example: disease
           enum:
@@ -1684,7 +1684,7 @@ components:
           - particular clinical situation in a disease or syndrome
           - Category
       example:
-        Type: disease
+        Typology: disease
         ORPHAcode: 10
         Date: 2000-01-23T04:56:07.000+00:00
     OrphanetURL:
